# rcj-schedule-planner

./: .gitignore  CLAUDE.md  PLAN.md  PLAN_improve_scheduler.md  PLAN_schedule_editor.md  PLAN_viewer_ux.md  PLAN_wallboard.md  README.md  generate_ao2026.sh  integrationtest.sh  pyproject.toml  schedule.json  schedule_viewer.html  split_divisions.sh
plans/: PLAN_arena_reset_fix.md  PLAN_extended_interview_slots.md  PLAN_min_max_runs_fix.md  PLAN_per_location_view.md  PLAN_schedule_editor.md  PLAN_viewer_json.md  PLAN_wallboard.md
rcj_planner/: cli.py  exporter.py  loader.py  models.py  persistence.py  scheduler.py
rcj_schedule_planner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sample/: generate_ao2026.sh  generate_ao2026_2interviewslots.sh
sample/input/: Line.csv  Line_Entry.csv  Maze.csv  Online_Simulation.csv
sample/output/: Day1.csv  Day2.csv  schedule.json
tests/: test_exporter.py  test_integration.py  test_integration_should_work.py  test_loader.py  test_models.py  test_scheduler.py
tests/integration/: should_work.sh  test_should_work.sh
ui/: schedule_editor.html  schedule_viewer.html
utils/create_superteam/: README.md  create_super_teams.py  test_create_super_teams.py
utils/split_division/: README.md  split_divisions.sh
