[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rcj-schedule-planner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.scripts]
rcj-planner = "rcj_planner.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["rcj_planner*"]
